# pytorch-infer-utils

./: .gitattributes  .gitignore  Dockerfile  README.md  README.md-e  pyproject.toml  setup.cfg
pytorch_infer_utils/: __init__.py  onnx2tensorrt.py  onnx_infer.py  tensorrt_infer.py  torch2onnx.py
pytorch_infer_utils/config/: onnx_cfg.yaml  tensorrt_cfg.yaml
pytorch_infer_utils/utils/: __init__.py  onnx_check.py  onnx_optimize.py  tensorrt_support.py  timer.py  yaml_parser.py
