[metadata]
name = pytorch-infer-utils
version = 0.1.0
author = Alex Gorodnitskiy
author_email = alexander.gorodnitskiy@phystech.edu
description = Export and inference utils for pytorch models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gorodnitskiy/pytorch_infer_utils

[options]
packages =
    pytorch_infer_utils
    pytorch_infer_utils.utils
include_package_data = True
python_requires = >=3.6
zip_safe = False
install_requires =
    Pillow==8.0.1
    numpy>=1.19.5
    opencv-python-headless~=4.5.2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.extras_require]
cpu =
    onnxruntime~=1.8.0
gpu =
    onnx~=1.9.0

[options.package_data]
* =
    config/*.yaml
