[metadata]
name = pytorch-infer-utils
version = 0.1.0
author = Alex Gorodnitskiy
author_email = alexander.gorodnitskiy@phystech.edu
description = Export and inference utils for pytorch models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gorodnitskiy/pytorch_infer_utils

[options]
packages =
    pytorch_infer_utils
    pytorch_infer_utils.utils
include_package_data = True
python_requires = >=3.6
zip_safe = False
install_requires =
    torch>=1.7.0
    onnxoptimizer>=0.2.6
    onnx-simplifier>=0.3.6
    Pillow==8.0.1
    numpy>=1.19.5
    opencv-python-headless~=4.5.2
    advanced_argparse @ https://github.com/gorodnitskiy/advanced_argparse/tarball/master#egg=advanced_argparse-0.1.0
    onnxruntime~=1.8.0
    onnx~=1.9.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.package_data]
* =
    config/*.yaml
